# Stock_prediction

./: evaluate_csv_mse.py  gpu_check.py  hyperparam_search.py  predict_tool.py  pyproject.toml  stock prediction.py  train.py
checkpoints/20260208_131619/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_132923/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_133552/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_153731/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_161536/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_161754/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_162625/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260208_163855/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
checkpoints/20260213_195832/: best_model.pth
checkpoints/20260215_172814/: best_model.pth  config_backup.py  history.json  pred_test.csv  pred_train.csv  pred_val.csv
data/: AAPL_daily.csv  AAPL_processed.csv  GOOGL_daily.csv  GOOGL_processed.csv  TSLA_daily.csv  TSLA_processed.csv  download_yahoo.py  preprocess.py
src/: config.py  dataset.py
src/compare/: _common.py  (+13 more)
(+246 files in other folders)
