[project]
name = "stock-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
  "statsmodels>=0.14.1",
    "torch>=2.6.0",
    "yfinance>=1.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
